# RMInfantry_wheelLegged_ws

./: .gitignore  README.md  bag_record.sh  bringup.sh  build.sh
doc/: .~ RobotMaster URDF 导出教程.docx
src/wheel_legged_control/: CMakeLists.txt  package.xml
src/wheel_legged_control/common/Application/: legControl.cpp  legControl.hpp  rotateControl.cpp  rotateControl.hpp  stateEstimate.cpp  stateEstimate.hpp
src/wheel_legged_control/common/Controller/: LQRController.hpp  LegController.hpp  PIDController.hpp  RotateController.hpp  StateEstimator.hpp
src/wheel_legged_control/common/Controllers/: adrc.cpp  adrc.hpp  lqr.cpp  lqr.hpp  pid.cpp  pid.hpp
src/wheel_legged_control/common/Engine/: engine.cpp  engine.hpp
src/wheel_legged_control/common/FSM/: jointFSM.cpp  jointFSM.hpp
src/wheel_legged_control/common/Filter/: kalman.c  kalman.h  kalman_filter.cpp  kalman_filter.hpp
src/wheel_legged_control/common/Model/: WheelLeggedRobot.cpp  WheelLeggedRobot.hpp
src/wheel_legged_control/common/Obersver/: luenberger.c  luenberger.h
src/wheel_legged_control/config_manager/: base_config_manager.cpp  base_config_manager.hpp  chassis_config_manager.cpp  chassis_config_manager.hpp
src/wheel_legged_control/fsm/: jointFSM.cpp  jointFSM.hpp  joint_fsm.hpp
src/wheel_legged_control/interfaces/: chassis_ctrl_interface.hpp  chassis_state_interface.hpp  imu_state_interface.hpp  joint_cmd_interface.cpp  joint_cmd_interface.hpp  joint_state_interface.cpp  joint_state_interface.hpp
src/wheel_legged_control/src/: chassis_control.cpp  gimbal_control.cpp  shoot_control.cpp  user_control.cpp  wheellegged_fsm.cpp
src/wheel_legged_description/: CMakeLists.txt  README.md  package.xml
src/wheel_legged_description/Infantry_wheelLegged_cyclBot/meshes/: gimbal_pitch_motor_link.STL  gimbal_pitch_motor_site0_link.STL  left_chassis_wheel_link.STL  left_chassis_wheel_site0_link.STL  left_frition_wheel_link.STL  left_front_hip_link.STL  left_rear_hip_link.STL  right_chassis_wheel_site0_link.STL  right_chassis_wheel_site1_link.STL  right_rear_hip_link.STL
src/wheel_legged_description/Infantry_wheelLegged_cyclBot/mjcf/: scene.xml  scene_terrain.xml  zt_2025_Infantry_wheelLeggedP_withShoot_s.xml
src/wheel_legged_description/RMInfantry_Complation_Vision.SLDASM/: CMakeLists.txt  package.xml
src/wheel_legged_description/cyclBot/mjcf/: scene.xml  (+2 more)
src/wheel_legged_hw/: CMakeLists.txt  package.xml
src/wheel_legged_hw/common/: pid.hpp
src/wheel_legged_hw/devices/: dji_bsp.hpp  dji_motor.hpp  dm_motor.hpp  dm_tools.hpp  hipnuc_imu.hpp
src/wheel_legged_hw/src/: hardware_bridge_node.cpp  hardware_brige_node.cpp
src/wheel_legged_interfaces/: CMakeLists.txt  package.xml
src/wheel_legged_interfaces/include/wheel_legged_interfaces/: imu_state_interface.hpp  joint_cmd_interface.hpp  joint_state_interface.hpp
src/wheel_legged_interfaces/src/: joint_cmd_interface.cpp  joint_state_interface.cpp
src/wheel_legged_launch/: CMakeLists.txt  README.md  package.xml
src/wheel_legged_launch/launch/: bringup.launch.py  chassis_control.launch.py  display.launch.py  gimbal_control.launch.py  hardware.launch.py  shoot_control.launch.py  simulation.launch.py  user_control.launch.py
src/wheel_legged_launch/plotjuggler/: plotjuggler.xml
src/wheel_legged_launch/rviz/: display.rviz
src/wheel_legged_matlab/cyclBot/: README.md  compute_lqr.m  linearize_system.m  lqr_fitting_results.mat
src/wheel_legged_matlab/seriBot/: apply_kinematics_v2.m  compute_lqr.m  dynamics.mat  dynamics_new_coords.mat  dynamics_v2.mat  kinematic_analysis.py  linearize_system_v2.m  linearized_system.mat  lqr_fitting_results.mat  lqr_results.mat  simplify_dynamics.m  simplify_dynamics_v2.m  推导-v2.md
src/wheel_legged_msgs/: CMakeLists.txt  package.xml
src/wheel_legged_msgs/msg/Common/Controller/: LqrControllerTrace.msg  PidControllerTrace.msg  StateEstimatorTrace.msg
src/wheel_legged_msgs/msg/Common/Model/: FiveLinkJointFrame.msg  LegVmcForceFrame.msg  WheelLeggedRobotState.msg
src/wheel_legged_msgs/msg/Common/Obersver/: FnEstimatorTrace.msg  KalmanFilterTrace.msg  XVEstimatorTrace.msg
src/wheel_legged_msgs/msg/HighLevelControl/: ChassisCtrl.msg  ChassisJointCmd.msg  ChassisJointState.msg  JointCmd.msg  JointCmds.msg  JointState.msg  ShootJointCmd.msg  ShootJointState.msg
src/wheel_legged_msgs/msg/HighLevelControl/Common/Controller/: LegControllerTrace.msg  PidControllerTrace.msg  RotateControllerTrace.msg
src/wheel_legged_msgs/msg/HighLevelControl/Common/Model/: LegVmcJointFrame.msg
src/wheel_legged_msgs/msg/HighLevelControl/Sport/: ChassisCmd.msg  ChassisState.msg
src/wheel_legged_msgs/msg/HighLevelControl/Sport/WheelLegged/: BodyWorldFrame.msg  FiveLinkForceFrame.msg  FiveLinkJointFrame.msg  LegControllerTrace.msg  LegVmcJointFrame.msg  LqrControllerTrace.msg  StateEstimatorTrace.msg
src/wheel_legged_msgs/msg/LowLevelControl/: ChassisMotorCmd.msg  ChassisMotorState.msg  GimbalMotorCmd.msg  GimbalMotorState.msg  IMUState.msg  JointCmd.msg  JointState.msg  ShootMotorCmd.msg  ShootMotorState.msg
src/wheel_legged_msgs/msg/LowLevelControl/DJI/: DjiMotorCmd.msg  DjiMotorState.msg
src/wheel_legged_msgs/msg/LowLevelControl/KTECH/: KtechMotorCmd.msg  KtechMotorState.msg
src/wheel_legged_msgs/msg/LowLevelControl/Motorevo/: MotorevoMotorCmd.msg  MotorevoMotorState.msg
src/wheel_legged_sim/: CMakeLists.txt  README.md  config.yaml  mujoco  package.xml
src/wheel_legged_sim/include/wheel_legged_sim/: mujoco_global.hpp  param.h  robot_bridge.hpp  robot_sdk_bridge.hpp  simulation_interfaces.hpp
src/wheel_legged_sim/matlab/: setup.m
src/wheel_legged_sim/matlab/Scirpt/: setup.m  untitled.m
src/wheel_legged_sim/matlab/config/: params_lqr.m  params_model.m
src/wheel_legged_sim/matlab/control/: solve_lqr.m
src/wheel_legged_sim/matlab/dynamics/: newton_euler.m  solve_acc.m
src/wheel_legged_sim/matlab/linear/: linerize_model.m
src/wheel_legged_sim/src/: mujoco_sim.cpp  simulation_brige_node.cpp
src/wheel_legged_sim/src/sw2urdf/: sw2urdf_tools.py
src/wheel_legged_sim/src/terrain_tool/: terrain_generator.py
(+56 files in other folders)
